--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,31 +8,26 @@ body {
   font-family: $primaryFont;
   box-sizing: border-box;
   //reset links
-a{
-  color: black;
-  text-decoration: none;
-  @include primaryTextLight;
+  a {
+    color: black;
+    text-decoration: none;
+    @include primaryTextLight;
 
-&:hover{
-  color: $purpleInDark;
-
-}
-
-}
+    &:hover {
+      color: $purpleInDark;
+    }
+  }
 }
 
 //reset scroll bar
 ::-webkit-scrollbar {
-  width: 13px;
+  width: 22px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #223E4C;
+  background-color: #223e4c;
 }
 
-  ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: #ffffff;
- 
 }
-
-
