--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -6,7 +6,11 @@
   font-size: $primaryFontSize;
   // background-color: red;
 
-
+  button span {
+    display: flex;
+    align-items: baseline;
+     gap:0.5rem
+  }
 
   p {
     font-family: $primaryFont;
@@ -20,10 +24,9 @@
     width: 1.5rem;
   }
 
-.d-flex a{
-  @include animatedButton;
-display: inline-block;
-margin-top: 5rem;
-}
- 
+  .d-flex a {
+    @include animatedButton;
+    display: inline-block;
+    margin-top: 5rem;
+  }
 }
